0.9
    EncodedValue uses Math.round(value/factor). This can change the retrieved values for EncodedValues #954
    EncodedDoubleValue and EncodedValue requires maxValue/factor to be a natural number #954
    default base algorithm for all modes is bidirectional A* (except speed mode)
    introduced landmarks based hybrid mode, #780
    moving all prepare.xy configs to prepare.ch.xy and e.g. disallow the old
    removed deprecated methods in GraphHopper (setCHWeighting, setCHWeightings, getCHWeightings, setCHWeightings, getCHPrepareThreads, setCHPrepareThreads), Path.calcMillis, findID of LocationIndex and all implementations

0.8
    refactoring to Weighting class, see #807
    removed FlagEncoder from parameters as weighting.getFlagEncoder can and is used
    all properties with prefix "osmreader." changed to "datareader." and osmreader.osm changed to datareader.file
    maven/gradle dependency graphhopper is now splitted into graphhopper-core and graphhopper-reader-osm, i.e. if you previouls depend on 'graphhopper' artificat you should now use graphhopper-reader-osm except environments like Android where you just load the graph and do no import
    use GraphHopperOSM as base class instead of GraphHopper
    OSM reader separated from core, use new graphhopper-core package
    moved subnetwork code into own package com.graphhopper.routing.subnetwork
    moved weighting code into own package com.graphhopper.routing.weighting
    code format has changed, so it is important to change your PRs too before you merge master, see discussion #770

0.7        
    added snapped points to output JSON for every path
    the foot routing is now much smoother and only considers safe paths, to use beautiful roads (i.e. prefer hiking routes etc) use the new 'hike' profiles, see #633
    vehicle constants have moved to FlagEncoderFactory